--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -3,3 +3,20 @@
     margin: 0 auto;
     overflow: hidden;
 }
+
+/* counter */
+.counter {
+    position: fixed;
+    right: 0;
+    top: 0;
+    text-align: center;
+    float: right;
+    padding: 15px;
+    min-width: 40px;
+}
+
+.counter-dark {
+    background: rgba(0, 0, 0, .6);
+    color: #fff;
+}
+
