--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -1,3 +1,4 @@
+/* Variables, Functions, and Conditionals */
 .container {
     max-width: 700px;
     margin: 0 auto;
@@ -10,7 +11,6 @@
     right: 0;
     top: 0;
     text-align: center;
-    float: right;
     padding: 15px;
     min-width: 40px;
 }
@@ -20,3 +20,14 @@
     color: #fff;
 }
 
+ul li {
+    list-style: none;
+    background: lightblue;
+    padding: 15px;
+    border: 4px solid grey;
+    margin-bottom: 10px;
+}
+
+.flex-contianer {
+    
+}
