almost. Need to fix display block for > 480

--- a/responsive-nav/css/styles.css
+++ b/responsive-nav/css/styles.css
@@ -2,6 +2,7 @@ body,
 html {
   margin: 0;
   padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -11,7 +12,6 @@ html {
 
 #menu-trigger {
   text-align: right;
-  font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   color: #1b818f;
   display: none;
@@ -23,7 +23,6 @@ html {
 #main-menu {
   display: inline-block;
   width: 100%;
-  top: 0;
   background-color: lightblue;
 }
 
@@ -35,7 +34,6 @@ html {
   list-style: none;
   display: inline-block;
   margin-right: 20px;
-  font-family: Arial, Helvetica, sans-serif;
   text-transform: uppercase;
 }
 
@@ -45,6 +43,9 @@ html {
   }
   nav#main-menu {
     display: none;
+  }
+  .nav-expanded {
+    display: block;
   }
   #main-menu ul li {
     display: block;
