playing with selectors

--- a/jquery-basics/css/style.css
+++ b/jquery-basics/css/style.css
@@ -1,4 +1,10 @@
 #firstH2 {
   color: green;
 }
+
+.myDivs {
+  border: 2px solid blue;
+  margin: 10px;
+  padding: 5px;
+}
 /*# sourceMappingURL=style.css.map */
