--- a/jquery-basics/css/style.scss
+++ b/jquery-basics/css/style.scss
@@ -11,3 +11,12 @@ div p {
     margin: 10px;
     padding: 5px;
 }
+
+.myCube {
+    width: 100px;
+    height: 100px;
+    background: blueviolet;
+    opacity: 0.4;
+    position: absolute;
+    padding: 20px;
+}
