--- a/jquery-basics/css/style.css
+++ b/jquery-basics/css/style.css
@@ -1,15 +1,15 @@
-#firstH2 {
-  color: green;
-}
-
-div p {
-  color: red;
-}
-
 .myDivs {
   border: 2px solid blue;
   margin: 10px;
   padding: 5px;
+}
+
+.selected {
+  border: 2px solid green;
+  margin: 10px;
+  padding: 5px;
+  background: lightgreen;
+  color: white;
 }
 
 .myCube {
